--- a/src/pages/journal.module.scss
+++ b/src/pages/journal.module.scss
@@ -73,6 +73,7 @@
   font-size: 0.9rem;
   margin: 1rem 0 1.5rem 0;
   color: var(--coolgray);
+  font-feature-settings: "lnum";
 }
 
 .bookmarkIcon {
